# DisciplinedTraderEnv

./: BLOG.md  Dockerfile  README.md  evaluate.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: data_generator.py  environment.py  graders.py  indicators.py  models.py  patterns_v2.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AgentTerminal.jsx  ChartMockup.jsx  MetricsPanel.jsx
server/: app.py
