[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disciplined_trader_env"
version = "1.0.0"
description = "Technical trading environment with multi-timeframes, risk limits, and psychology rules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pydantic>=2.0",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]